with their complete changes, see the AUTHORS file.

-------------------------------------------------------------------------------

* Changes in Cdecl 12.1

** Better copy constructor support
Declarations like:

    c++decl> explain C(C const&)
    declare C as constructor (reference to constant C)

are now supported better.

** `_BitInt(N)`
The `_BitInt(N)` type in C23 in now supported.

** `constexpr`
`constexpr` in C23 is now supported.

** `true`, `false`, `nullptr`, `static_assert`, & `thread_local`
These are now also keywords in C23.

** `typeof` & `typeof_unqual`
These C23 keywords are now recognized, but not supported by cdecl.

** More C++23 standard types
Added the standard C++23 types `std::bfloat16_t`, `std::float128_t`,
`std::float16_t`, `std::float32_t`, `std::float64_t`, `std::ospanstream`,
`std::spanbuf`, `std::spanstream`, `std::stacktrace`, `std::unexpect_t`,
`std::wospanstream`, `std::wspanbuf`, and `std::wspanstream`.

** Enumeration bit-fields
Enumerations in C++ can now be bit fields.

** Explicit object parameters
Explicit object parameters in C++23 are preliminarily supported.

** `static` `operator()`
Now allow `operator()` to be `static` in C++23.

** Added `std::bernoulli_distribution` and `std::random_device`
Added these missing C++11 types.

** `static` or `const` array parameters
Both `static` or `const` array declarations are now additionally recognized
outside of function parameters allowing more specific error reporting (since
they're still illegal).

** Explicit user-defined conversion operators
Explicit user-defined conversion operators are now correctly allowed in C++11
and later.

** Better alignment error location
Improved the location of alignment errors.

** Fixed aligned bit fields
Aligned bit fields are now correctly forbidden.

** Fixed function returning pointer to member pointer to T
The output of a declaration like:

    c++decl> declare f as function returning pointer to member of class C \
        pointer to int