@@ -1,1 +1,1 @@
-_Alignas(0) char c;
+alignas(0) char c;
