@@ -1,0 +1,1 @@
+_Alignas(8) char c;
