@@ -1,4 +1,4 @@
 EXPECTED_EXIT=65
 cdecl <<END
-explain _Alignas(4) register int x
+explain alignas(4) register int x
 END
